# checked_array-rust

./: .appveyor.yml  .gitignore  Cargo.toml  README.md  fuzz_unix.sh  test_unix.sh
fuzz/: Cargo.toml
fuzz/src/: args_array_alloc.rs  args_array_mut.rs  args_array_ref.rs  main.rs
src/: lib.rs  misc.rs  preallocated.rs  traits.rs  wrapper.rs
